[package]
name = "rsomics-help"
version = "0.1.0"
description = "Family-wide `--help` renderer for rsomics-* CLIs: figlet banner with gradient, section helpers, plain / JSON modes for AI consumers."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories = ["command-line-interface"]
keywords = ["help", "cli", "ansi", "figlet", "ascii-art"]

[dependencies]
figlet-rs = "1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
