[package]
name = "rsomics-help"
version = "0.3.1"
description = "Family-wide `--help` renderer for rsomics-* CLIs: figlet banner with gradient, section helpers, plain / JSON modes for AI consumers."
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
categories = ["command-line-interface"]
keywords = ["help", "cli", "ansi", "figlet", "ascii-art"]
readme = "README.md"

[dependencies]
figlet-rs = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
terminal_size = "0.4"

